# Docker-ROS-xacro-converter

./: Dockerfile  README.md  run.sh
.devcontainer/: devcontainer.json
ws/: convert_command.sh
ws/devel/: local_setup.fish  setup.fish
ws/devel/lib/pkgconfig/: spot_bringup.pc  spot_description.pc
ws/devel/share/spot_bringup/cmake/: spot_bringupConfig.cmake
ws/devel/share/spot_description/cmake/: spot_descriptionConfig.cmake
ws/src/spot_ros/: .gitmodules  README.md
ws/src/spot_ros/spot_bringup/: CMakeLists.txt
ws/src/spot_ros/spot_bringup/launch/: driver_delayed.launch
ws/src/spot_ros/spot_bringup/scripts/: install
ws/src/spot_ros/spot_description/: CMakeLists.txt
ws/src/spot_ros/spot_description/meshes/: spot_cover.stl
ws/src/spot_ros/spot_description/urdf/: spot.urdf.xacro  spot_converted.urdf
